--- a/requirements.txt
+++ b/requirements.txt
@@ -13,7 +13,7 @@ httplib2==0.12.1
 idna==2.7
 isort==4.3.15
 itsdangerous==1.1.0
-Jinja2==2.10
+Jinja2>=2.10.1
 lazy-object-proxy==1.3.1
 MarkupSafe==1.1.1
 mccabe==0.6.1
@@ -34,7 +34,7 @@ selenium==3.141.0
 six==1.11.0
 typed-ast==1.3.1
 uritemplate==3.0.0
-urllib3==1.24.1
+urllib3>=1.24.2
 wavefront-api-client==2.29.47
 Werkzeug==0.15.1
 wrapt==1.11.1
